OpenMP option in Makefile change to the exec_path in wrappers

--- a/examples/notebooks/RSF_spring-block.ipynb
+++ b/examples/notebooks/RSF_spring-block.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "# Go up in the directory tree\n",
     "upup = [os.pardir]*2\n",
     "qdyn_dir = os.path.join(*upup)\n",
+    "#qdyn_dir = \"/home/crodriguezpiceda/qdyn_intel_openmp/qdyn\"\n",
     "# Get QDYN src directory\n",
     "src_dir = os.path.abspath(\n",
     "    os.path.join(\n",
