--- a/examples/notebooks/double_asperity.ipynb
+++ b/examples/notebooks/double_asperity.ipynb
@@ -29770,7 +29770,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -29784,7 +29784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
