clean paths in notebook example

--- a/examples/notebooks/compute_events.ipynb
+++ b/examples/notebooks/compute_events.ipynb
@@ -41,8 +41,7 @@
     "\n",
     "# Add QDYN source directory to PATH\n",
     "# Go up in the directory tree\n",
-    "# qdyn_dir = \"/home/crodriguezpiceda/qdyn_intel_openmp/qdyn\"\n",
-    "qdyn_dir = \"/Users/crpiceda/Desktop/archer_work/qdyn_github/qdyn\"\n",
+    "qdyn_dir = \"/path/to/qdyn/repository\"\n",
     "\n",
     "\n",
     "# Get QDYN src directory\n",
@@ -98,9 +97,8 @@
    ],
    "source": [
     "# Read meshdict and set dict (needed for reading the outputs afterwards)\n",
-    "# directory = sys.path[0]\n",
-    "# test directory\n",
-    "directory = \"/Users/crpiceda/Desktop/archer_work/models/qdyn/qdyn_github/test_vmaxfault/v9_sm_dy_0p1\"\n",
+    "# output directory\n",
+    "directory = \"/path/to/model/directory\"\n",
     "os.chdir(directory)\n",
     "\n",
     "path_dict=os.path.join(directory,\"meshdict.pkl\")\n",
